web/app/themes/cfs/assets/styles/components/_pagination.scss
// Pagination

.pagination {
  @extend .font-display;
  background: $white;
  li {
    display: inline-block;
    // margin-right: grid(1);
    .page-numbers:not(.prev,.next) {
      &::after {
        content: ',';
      }
      &:last-of-type::after {
        content: '';
      }
    }
    .next {
      margin-left: grid(1);
    }
    .prev {
      margin-right: grid(1);
    }
    .current {
      text-decoration: underline;
    }
  }

  // Mobile only styles
  @include max-screen($breakpoint-md) {
    border-left: mobile-grid(2) solid $black;
    border-right: mobile-grid(2) solid $black;
    padding: 0 mobile-grid(3) mobile-grid(5);
  }

  @include media-md {
    @include hr-above;
    padding: grid(2) 0;
    margin-top: grid(4);
    border: none;
    a:hover {
      color: $red;
    }
    ul {
      margin-left: columns(8, 14);
      padding-left: $gutter;
    }
  }
}

